--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@ body {
 
 }
 h1 {
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 10px;
+    font-size: 80px;
 
 }
 h2 {
@@ -24,13 +25,19 @@ button {
     padding-bottom: 10px;
     color: white;
     font-weight: bold;
-    width: 200px;
+    width: 400px;
     margin-bottom: 5px;
     border-radius: 5px;
 }
 #increment-btn {
     background-color: darkred;
+    font-size: 20px;
 }
 #save-btn {
     background-color: darkgreen;
+    font-size: 20px;
+}
+p {
+    font-size: 30px;
+    
 }
