--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
      font-weight: bold;
      text-align: center;
      background-repeat: no-repeat;
+     height: 100vh;
+     margin: 0;
+     padding: 0;
+     overflow-x: hidden;
 
 }
 h1 {
@@ -48,4 +52,6 @@ p {
     background-color: black;
    width: 50%;
    margin-left: 11em;
+   position: relative;
+   display: block;
 }
